src/index.css
*,
::after,
::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Commissioner', sans-serif;
}

.main-section {
  height: 100vh;
  display: flex;
  background-color: bisque;
  background-image: url(./images/31387.svg);
}

.left-body {
  flex: 1 0 0;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  position: relative;
}

.right-body {
  flex: 3 1 auto;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.header {
  font-family: 'Commissioner', sans-serif;
  font-weight: 600;
  font-size: 40px;
  position: absolute;
  top: 40px;
  left: 40px;
}

.form-container {
  background-color: whitesmoke;
  border-radius: 10px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
  display: flex;
  flex-direction: column;
  padding: 10px;
  margin: 20px;
  width: 80%;
}

.form {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  padding: 10px;
}

.form-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin-bottom: 10px;
  font-weight: 600;
  font-size: 20px;
  border-bottom: 1px solid rgb(255, 102, 0);
}

.ninja {
  border-bottom: 1px solid rgb(255, 102, 0);
  padding-bottom: 10px;
}

.radio-choice {
  display: flex;
  margin: 10px 0px;
  align-items: center;
  justify-content: space-between;
}

.name {
  margin: 0 5px;
}

.paragraph-div {
  text-align: center;
  border-bottom: 1px solid rgb(255, 102, 0);
}

.generate-section {
  display: flex;
  padding: 5px;
}

.input-box {
  width: 50%;
  margin: 5px;
  border-radius: 5px;
}

.text-container {
  background-color: whitesmoke;
  border-radius: 10px;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
  margin: 20px;
  padding: 20px;
  height: 60%;
  width: 80%;
  overflow: scroll;
}

.btn-container {
  display: flex;
  justify-content: space-between;
  margin-top: 5px;
}

.btn {
  text-transform: uppercase;
  transition: all 0.3s linear;
  flex: 1;
  padding: 5px 10px;
  margin: 5px;
  border-radius: 5px;
  background: rgba(51, 102, 255, 0.4);
  justify-content: center;
  align-items: center;
  border: 1px solid rgb(255, 102, 0);
  cursor: pointer;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
}

.btn:hover {
  background: rgba(255, 102, 0, 0.4);
  border-color: rgb(51, 102, 255);
}

